--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,11 @@
 {
-	"presets": ["es2015"],
-	"plugins": ["transform-object-assign"]
+	"presets": [
+		[
+			"@babel/preset-env",
+			{
+				"useBuiltIns": "usage",
+				"corejs": 3
+			}
+		]
+	]
 }
