--- a/package.json
+++ b/package.json
@@ -10,16 +10,17 @@
 		"@cycle/run": "^5.4.0",
 		"@cycle/state": "^1.4.0",
 		"@cycle/time": "^0.20.0",
+		"core-js": "^3.6.5",
 		"immutable": "^3.7.4",
 		"xstream": "^11.12.0"
 	},
 	"devDependencies": {
-		"browserify": "13.0.x",
-		"browserify-hmr": "^0.3.1",
-		"babel-preset-es2015": "^6.3.13",
-		"babel-plugin-transform-object-assign": "^6.3.13",
-		"babel-register": "^6.4.3",
-		"babelify": "^7.2.0",
+		"@babel/core": "^7.11.1",
+		"@babel/preset-env": "^7.11.0",
+		"@babel/register": "^7.10.5",
+		"babelify": "^10.0.0",
+		"browserify": "^16.5.2",
+		"browserify-hmr": "^0.4.1",
 		"mkdirp": "0.5.x",
 		"watchify": "^3.7.0"
 	},
@@ -28,6 +29,6 @@
 		"prebrowserify": "mkdirp dist",
 		"browserify": "browserify src/main.js -t babelify --outfile dist/main.js",
 		"start": "npm install && npm run browserify && echo 'OPEN index.html IN YOUR BROWSER'",
-		"live": "watchify -t babelify -p browserify-hmr src/main.js -o dist/main.js"
+		"live": "watchify -t babelify -p [browserify-hmr --disableHostCheck] src/main.js -o dist/main.js"
 	}
 }
