--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
 		"babelify": "^10.0.0",
 		"browserify": "^16.5.2",
 		"browserify-hmr": "^0.4.1",
-		"mkdirp": "0.5.x",
+		"mkdirp": "^1.0.4",
 		"watchify": "^3.7.0"
 	},
 	"scripts": {
