--- a/package.json
+++ b/package.json
@@ -10,25 +10,22 @@
 		"@cycle/run": "^5.4.0",
 		"@cycle/state": "^1.4.0",
 		"@cycle/time": "^0.20.0",
-		"core-js": "^3.6.5",
 		"immutable": "^3.7.4",
 		"xstream": "^11.12.0"
 	},
 	"devDependencies": {
-		"@babel/core": "^7.11.1",
-		"@babel/preset-env": "^7.11.0",
-		"@babel/register": "^7.10.5",
-		"babelify": "^10.0.0",
 		"browserify": "^16.5.2",
 		"browserify-hmr": "^0.4.1",
 		"mkdirp": "^1.0.4",
+		"tsify": "^5.0.0",
+		"typescript": "^3.9.7",
 		"watchify": "^3.7.0"
 	},
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"prebrowserify": "mkdirp dist",
-		"browserify": "browserify src/main.js -t babelify --outfile dist/main.js",
+		"browserify": "browserify src/main.ts -p tsify --outfile dist/main.js",
 		"start": "npm install && npm run browserify && echo 'OPEN index.html IN YOUR BROWSER'",
-		"live": "watchify -t babelify -p [browserify-hmr --disableHostCheck] src/main.js -o dist/main.js"
+		"live": "watchify -p tsify -p [browserify-hmr --disableHostCheck] src/main.ts -o dist/main.js"
 	}
 }
