--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,8 +26,7 @@
 
 		/* Strict Type-Checking Options */
 		"strict": true /* Enable all strict type-checking options. */,
-		// @NOTE: The goal is the make this true "in the future"
-		"noImplicitAny": false /* Raise error on expressions and declarations with an implied 'any' type. */,
+		// "noImplicitAny": false /* Raise error on expressions and declarations with an implied 'any' type. */,
 		// "strictNullChecks": true,              /* Enable strict null checks. */
 		// "strictFunctionTypes": true,           /* Enable strict checking of function types. */
 		// "strictBindCallApply": true,           /* Enable strict 'bind', 'call', and 'apply' methods on functions. */
